@@ -1,3 +1,3 @@
-EBUILD emacs-common-gentoo-9999.ebuild 3891 RMD160 a06330cab2cd0c39b2b35547964ddf81e556bcb2 SHA1 27af49f8e110b911d5f3630e83c38a8d4684f8b7 SHA256 92e088c41822a0dfd1694bb813d1156bb636f05321c34057aa28c660c96c6453
-MISC ChangeLog 1182 RMD160 e83d742ae9e15cf5c2b97774a3399d000a08c1b6 SHA1 c981d73c1cb47a4bd7e2ca9dbf1caa46bafd029b SHA256 6379bc505b6328998c08c3f6f10439a9b63442570c7c044d5a5773a3e6872c24
-MISC metadata.xml 235 RMD160 ce490aa2edb4e105063e20d4aeb7146a7d02f636 SHA1 e4c16f2e41d467b079a7f70ee0b3b2ac42799fc3 SHA256 7f2c9480b2a1dc4ac18ea5f96b0a003d5064168f1b5e17956b04eaaca5cc2774
+EBUILD emacs-common-gentoo-9999.ebuild 3878 RMD160 f8fb1d2dd1cfb85b1db38caa9fd51b1f4d542793 SHA1 36a29fd05b09ee3a346abd468e0d276e681ac9ee SHA256 5935e247f3e9ac45a643b697cdba51ff1d680a046cfa3e6d5a1dd252dc7b1d2c
+MISC ChangeLog 1319 RMD160 fcc204d4de06d3a8d6a30a2f456e52a05cc18fb6 SHA1 d77a545335ca932a9a11b00da32de0c606af380a SHA256 b87f511d4c819c040e9ab155f69d94236d0db7a410518120d3bb8d0d5768c183
+MISC metadata.xml 235 RMD160 94ec7acf062c24ce7a5c9b98fff11c2a68baf269 SHA1 c948e0bb625876a97f14834fe5848367dda93628 SHA256 81f928a2ff996d91f098bc1d718adec61bbb6afa1f8e5f1b29f0931a73902ec1
